--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,10 @@
-
+@import 'tailwindcss';
 *,
 *::after,
 *::before {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-}
-
-#root {
-  max-width: 1280px;
 }
 
 :root {
@@ -41,7 +37,20 @@ html {
 }
 
 
+body {
+  width: 100%;
+  min-height: 100vh;
+  background: var(--palelime);
+  /* display: flex;
+  flex-direction: column;
+  align-items: center; */
+}
 
+#root {
+  min-width: 1223px;
+  max-width: 80rem; /* 1280px */
+  margin: 0 auto;
+}
 
 
 
@@ -70,14 +79,6 @@ html {
 }
 a:hover {
   color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
 h1 {
